<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSTracker2015</string>
    <string name="app_version">0.9.0</string>
    <string name="title_section1">Data</string>
    <string name="title_section2">Setting</string>
    <string name="title_section3">Map</string>
    <string name="action_option">Option</string>
    <string name="action_imfo">Information</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Provider">Provider</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Accuracy">Accuracy</string>
    <string name="Altitude">Altitude</string>
    <string name="Address">Address</string>
    <string name="title_section0">ACTION</string>
    <string name="Speed">Speed</string>
    <string name="Bearing">Bearing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
